# molmo

./: .cursorrules  .gitignore  .gitmodules  CLAUDE.md  CLEANUP_CANDIDATES.md  DOWNLOAD_LAYER16_DATA.md  JOURNAL.md  NAMING_STANDARDIZATION.md  PREPROCESSING_FIX_LESSONS.md  README.md  REBUTTAL.md  SCHEMA_STANDARDIZATION.md  analysis_results  analyze_caption_lengths.py  build_contextual_caches.sh  check_first_sentence_captions.py  check_hf_status.py  cleanup_hf_repo.py  comparison_sample.json  config_overlap_and_resize-c2.yaml  config_overlap_and_resize-c2_pixmo-cap.yaml  config_overlap_and_resize-c2_pixmo-points.yaml  config_resize.yaml  delete_all_hf_repo.py  download_hf_ckpt.py  download_layer16_jsons.py  eval_captioning_gpt-judge.py  find_all_corrupted_npy.py  fix_corrupted_json.py  fix_viewer_files.py  generate_demo.sh  make_htmls.sh  molmo_data  monitor_parallel.sh  openvision2_test.py  paper_data_manifest.json  precompute_and_run_contextual_nn.sh  pyproject.toml  quick_check_layer_corruption.py  regenerate_qwen2vl.sh  (+51 more)
.claude/: settings.json
analysis_results/: token0_noise_ablation_train.json  token_inclusion_study_train.json  token_patching_study_train.json  token_removal_study_train.json  token_removal_study_validation.json
configs/: baseline_pixmo-captions_llama3-8b_dinov2-large-336.yaml  baseline_pixmo-captions_llama3-8b_openvision2-l-14-336.yaml  baseline_pixmo-captions_llama3-8b_siglip.yaml  baseline_pixmo-captions_llama3-8b_vit-l-14-336_linear.yaml  baseline_pixmo-captions_olmo-7b_dinov2-large-336.yaml  baseline_pixmo-captions_olmo-7b_openvision2-l-14-336.yaml  baseline_pixmo-captions_olmo-7b_vit-l-14-336.yaml  baseline_pixmo-captions_qwen2-7b_dinov2-large-336.yaml  baseline_pixmo-captions_qwen2-7b_openvision2-l-14-336.yaml  baseline_pixmo-captions_qwen2-7b_vit-l-14-336.yaml  baseline_pixmo-captions_qwen2-7b_vit-l-14-336_seed10.yaml
configs_toy_token-img2token/: baseline_pixmo-captions.yaml  (+27 more)
(+678 files in other folders)
