[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai2-molmo"
dynamic = ["version"]
readme = "README.md"
description = "Multimodal Open Language Model (Molmo)"
authors = [
    { name = "Allen Institute for Artificial Intelligence" }
]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "absl-py==2.2.1",
    "cached-property==2.0.1",
    "fiddle==0.3.0",
    "numpy==1.26.4",
    "torch==2.3.1+cu121",
    "torchvision==0.18.0+cu121",
    "omegaconf==2.3.0",
    "rich==13.9.4",
    "boto3==1.37.25",
    "google-cloud-storage==2.19.0",
    "tokenizers==0.21.2",
    "packaging==24.1",
    "cached_path==1.7.1",
    "transformers==4.48.0",
    "datasets==3.5.0",
    "huggingface-hub==0.27.1",
    "sentencepiece==0.2.0",
    "requests==2.32.3",
    "einops==0.8.1",
    "einops-exts==0.0.4",
    "tqdm==4.67.1",
    "gcsfs==2023.9.2",
    "accelerate==1.5.2"
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.2",
    "mypy==1.3.0",
    "black==23.12.1",
    "isort==5.12.0",
    "pytest==8.3.5",
    "pytest-sphinx==0.6.3",
    "twine==6.1.0",
    "setuptools==59.6.0",
    "wheel==0.45.1",
    "build==1.2.2.post1",
]
train = [
    "wandb==0.19.9",
    "beaker-gantry==1.14.1",
    "click==8.1.8",
    "torchmetrics==1.7.0",
    "smashed==0.21.5",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "msgspec==0.19.0",
    "openai==1.70.0",
    "python-Levenshtein==0.27.1",
    "editdistance==0.8.1"
]
serve = [
    "pydantic==2.11.1",
    "uvicorn==0.34.0",
    "gradio==5.14.0",
    "fastapi==0.115.12",
]
all = [
    "ai2-molmo[dev,train,serve]",
]

[project.urls]
Homepage = "https://github.com/allenai/molmo"
Repository = "https://github.com/allenai/molmo"

[tool.setuptools]
include-package-data = true
packages = ["olmo"]
